# danadresse-docs

./: README.md  index.html  openapi.json  openapi.yaml  swagger.html
clients/migrate-cli/: LICENSE  README.md  package.json  tsconfig.json
clients/migrate-cli/src/: index.ts
clients/python/: .gitignore  README.md  pyproject.toml
clients/python/danadresse/: __init__.py  client.py
clients/python/tests/: test_client.py
clients/typescript/: README.md  package.json
clients/typescript/src/: index.ts
clients/typescript/tests/: client.test.ts
clients/wordpress-plugin/: .gitignore  danadresse-checkout.php  readme.txt
clients/wordpress-plugin/assets/css/: checkout.css
clients/wordpress-plugin/assets/js/: checkout.js
clients/wordpress-plugin/includes/: class-checkout.php  class-rest.php  class-settings.php
examples/: README.md  curl.sh  javascript_example.js  php_example.php  python_example.py
examples/benchmark/: api_bench.py
examples/mcp/: README.md  claude_desktop_config.json
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/src/: client.ts  index.ts  tools.ts
mcp-server/src/__tests__/: integration.test.ts
